# ChessServer

./: Cargo.toml  ChessServer.postman_collection.json  docker-compose.yml
migrations/: 0001_create_users_table.sql
src/: main.rs  response.rs  state.rs
src/db/: mod.rs
src/handlers/: auth_handler.rs
src/models/: auth.rs  user.rs
src/repositories/: user_repository.rs
src/routes/: auth.rs  health.rs  mod.rs
src/services/: auth_service.rs
src/validation/: auth.rs
