[package]
name = "ChessServer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "uuid", "chrono"] }
dotenvy = "0.15"
uuid = { version = "1.24.0", features = ["v4", "serde"] }
chrono = { version = "0.4.45", features = ["serde"] }
argon2 = "0.5.3"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
validator = { version = "0.20.0", features = ["derive"] }
